<resources>
    <string name="app_name" translatable="false">Cosmic</string>
    <string name="bemvindo" translatable="false">Bem vindo ao Cosmic!</string>
    <string name="start" translatable="false">Start Adventure</string>
    <string name="planets" translatable="false">Planetas</string>
    <string name="satelits" translatable="false">Satélite</string>
    <string name="missoes" translatable="false">Missões</string>
    <string name="estrelas" translatable="false">Estrelas</string>
    <string name="relatos" translatable="false">Relatos</string>
    <string name="images" translatable="false">Imagens</string>
    <string name="strelas" translatable="false">Estrelas:</string>
    <string name="cont_strelas" translatable="false">As estrelas nascem a partir de nebulosas constituídas, em grande parte, por gases, poeira e partículas sólidas.

Os cientistas explicam que existe uma atração recíproca entre as partículas de matéria que compõe a grande nuvem - a nebulosa. Essa atração é denominada força de gravidade. Em razão da força de gravidade, a matéria que constitui uma nebulosa se agrupa, compondo uma massa compacta e formando os astros.

Alguns astros alcançam um tamanho gigantesco, e a temperatura no seu interior é elevadíssima. A pressão e o aquecimento se tornam tão intensos no centro desses astros que uma grande quantidade de energia é liberada sob forma de calor e luz. Essa propriedade de produzir o próprio calor e a própria luz é o que diferencia as estrelas dos planetas e de outros astros.

O brilho das estrelas é produzido por parte de sua energia, que se irradia pelo espaço sob a forma de luz. As estrelas não duram para sempre. Elas nascem, evoluem e morrem. Esse mesmo processo ocorre com o Sol, pois ele também é uma estrela.       " </string>

    <string name="missions" translatable="false">Missões:</string>

    <string name="contmiss" translatable="false">1 – Primeiro voo: STS-1 (Columbia)
  Em 12 de abril de 1981, o ônibus espacial Columbia decolou pela primeira vez, levando os astronautas John Young e Bob Crippen. Essa missão marcou muitas estréias, incluindo a primeira vez que motores de foguetes de combustível sólido foram utilizados para a propulsão de uma nave espacial em órbita, e a primeira vez que uma nave espacial pousou na Terra deslizando por uma pista, em vez de pelo oceano. O voo do Columbia foi também o primeiro tripulado. Embora a missão tenha tido algumas anomalias, no geral realizou uma viagem inaugural excepcional.</string>

    <string name="planetstil" translatable="false">Planetas do Sistema Solar:</string>
    <string name="planetscont" translatable="false">Um planeta é um corpo celeste que orbita uma estrela ou um remanescente de estrela,
com massa suficiente para se tornar esférico pela sua própria gravidade,mas não ao ponto de causar fusão termonuclear, e que tenha limpo de planetesimais a sua região vizinha
 (dominância orbital).

O termo planeta é antigo, com ligações
com a história, ciência, mitologia e religião.
Os planetas eram vistos por muitas culturas antigas como divinos ou emissários de deuses.

À medida que o conhecimento científico evoluiu, a percepção humana sobre os planetas mudou,
incorporando diversos tipos de objetos. Em 2006, a União Astronômica Internacional (UAI)
adotou oficialmente uma resolução definindo planetas dentro do Sistema Solar,
 a qual tem sido elogiada e criticada, permanecendo em discussão entre alguns cientistas.</string>


    <string name="relatscont" translatable="false">1.Soyuz 1 (Abril de 1967):

 Esse foi o primeiro acidente da história da humanidade que ocorreu no espaço. A Soyuz 1, missão tripulada soviética, partiu para a órbita da Terra com o objetivo de trocar tripulação com outra nave, a Soyuz 2. Mas desde o lançamento, o coronel Vladimir Komarov, que comandava a missão, teve problemas técnicos com o módulo espacial. Foram tantos problemas que decidiram abortar a missão. Quando a espaçonave entrou na atmosfera terrestre, Komarov tentou acionar o paraquedas principal, para aliviar a queda, mas ele não funcionou. Com isso, o foguete caiu com um impacto de 140 km/h e o astronauta não teve a menor chance de sobreviver.
______________________________________
 2.A aparição do gramado de boliche:

 Durante a noite de 12 de fevereiro de 2010, Roy Shaw, um cético para assuntos paranormais, estava passeando com seu cachorro em Devon, Inglaterra. Andando pelas tranquilas ruas de seu bairro, ele começou a se aproximar do clube de Boliche na Grama local, quando foi surpreendido por um objeto estranho pairando alto no céu.
Nebuloso e distante, num primeiro momento, começou a descer lentamente e se mover mais perto na direção de Shaw. De formato circular, a nave ficou suspensa acima do clube de boliche e Shaw entrou no terreno para obter uma melhor visão do objeto. Ele assistiu com espanto o ziguezaguear e a aterrissagem do outro lado do gramado.
Ele se surpreendeu ao encontrar a nave espacial de 30 metros de comprimento, com luzes azuis e vermelhas piscando em volta. Neste momento, um vulto branco saiu da espaçonave e flutuou em direção a ele, atravessando o gramado. “Tinha cerca de 1,20m, parecia ser translúcido e se mexeu muito lentamente em nossa direção. Fiquei paralisado porque ele fazia um ruído estranho que soava como “meu, meu” repetido várias vezes”, relatou mais tarde a jornais.
_________________________________________
3.O caso de Livingstone:

O engenheiro florestal Robert Taylor empregado pela Corporação de Desenvolvimento Livingston saiu de casa às 10h30 do dia 5 de novembro de 1979, para monitorar algumas mudas que ele havia plantado em um morro fora da cidade. Acompanhado de seu cão, ele estacionou sua caminhonete no início de uma trilha na mata e precedeu o resto do caminho a pé. Chegando a uma clareira na floresta, Taylor foi saudado por um espetáculo incrível.
Suspenso no ar, havia um objeto esférico silencioso e imóvel, que media cerca de seis metros de largura por três de altura. Era todo preto, com um anel e uma fileira de pequenas janelas circulares ao redor. Partes do objeto eram transparentes ou quase, o que deu a Taylor a impressão de que o objeto estava a tentando se tornar invisível por inteiro. Enquanto ele começou a andar em direção ao objeto, duas esferas menores foram ejetadas da nave principal e rolaram para cima dele. Cada uma grudou em uma das pernas da calça de Taylor e ambas emitiram um cheiro sufocante, que o fez perder a consciência.
Quando acordou, estava de bruços na grama, sem ETs por perto e com seu cachorro latindo e correndo loucamente. Ao tentar chamar o cão, percebeu que tinha perdido a voz, e, ao tentar mexer os pés, concluiu, horrorizado, que não conseguia ficar de pé nem menos andar. Arrastando-se no chão, conseguiu chegar até o seu caminhão, onde recuperou as funções das pernas e da voz.</string>


    <string name="sateline" translatable="false">Satélite</string>
    <string name="stacont" translatable="false">Os satélites começaram a ser lançados em 1957, os arredores terrestres estão se tornando um grande depósito de lixo. A sorte é que quase metade de mais de 5 000 deles já foram incinerados ao saírem de suas órbitas e reentrarem na atmosfera. Quem controla a ocupação do espaço em volta do planeta é a Organização das Nações Unidas (ONU), autorizando novos lançamentos e regulando o ponto onde cada equipamento pode ser posicionado. Mas seus técnicos nem sempre têm acesso às informações adequadas, principalmente para os satélites de uso militar.</string>

</resources>
